--- a/iterm2_profiles/com.googlecode.iterm2.plist
+++ b/iterm2_profiles/com.googlecode.iterm2.plist
@@ -2048,6 +2048,10 @@
 	<true/>
 	<key>NoSyncInstallationId</key>
 	<string>4542690B-A281-45A6-9BCC-746612A8969D</string>
+	<key>NoSyncNeverRemindPrefsChangesLostForFile</key>
+	<true/>
+	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
+	<integer>0</integer>
 	<key>NoSyncPermissionToShowTip</key>
 	<false/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
@@ -2110,7 +2114,7 @@
 	<key>Print In Black And White</key>
 	<true/>
 	<key>PromptOnQuit</key>
-	<true/>
+	<false/>
 	<key>QuitWhenAllWindowsClosed</key>
 	<false/>
 	<key>RightCommand</key>
