--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Sublime/Package Control.system-ca-bundle
 Sublime/Package Control.cache/
 Sublime/Package Control.ca-certs/
 Sublime/User/TestRSpec.last-run
+vim/bundle
