--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bash/git-aware-prompt"]
 	path = bash/git-aware-prompt
 	url = https://github.com/jimeh/git-aware-prompt.git
+[submodule "git"]
+	path = git
+	url = https://github.com/git/git/
