--- a/iterm2_profiles/com.googlecode.iterm2.plist
+++ b/iterm2_profiles/com.googlecode.iterm2.plist
@@ -570,19 +570,19 @@
 		<integer>1</integer>
 	</dict>
 	<key>NSWindow Frame NSFontPanel</key>
-	<string>1196 82 445 77 0 0 1680 1027 </string>
+	<string>2048 33 445 77 0 0 2560 1417 </string>
 	<key>NSWindow Frame Preferences</key>
 	<string>812 508 606 456 0 0 1680 1027 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
 	<string>1664 795 700 622 0 0 2560 1417 </string>
 	<key>NSWindow Frame SessionsPreferences</key>
-	<string>994 480 599 502 0 0 1680 1027 </string>
+	<string>1808 762 599 502 0 0 2560 1417 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>426 377 796 473 0 0 1680 1027 </string>
+	<string>882 -729 796 473 456 -1050 1680 1027 </string>
 	<key>NSWindow Frame UKCrashReporter</key>
 	<string>127 443 592 584 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 51 1676 976 0 0 1680 1027 </string>
+	<string>458 -379 570 352 456 -1050 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>0 48 1676 979 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
@@ -1239,11 +1239,11 @@
 			<key>Name</key>
 			<string>Default</string>
 			<key>Non Ascii Font</key>
-			<string>Monaco 12</string>
+			<string>Hack-Regular 15</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>Hack-Regular 11</string>
+			<string>Hack-Regular 14</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
@@ -1305,7 +1305,7 @@
 			<key>Use Italic Font</key>
 			<true/>
 			<key>Use Non-ASCII Font</key>
-			<false/>
+			<true/>
 			<key>Vertical Spacing</key>
 			<real>1</real>
 			<key>Visual Bell</key>
@@ -1965,11 +1965,11 @@
 			<key>Name</key>
 			<string>Ayu Mirage</string>
 			<key>Non Ascii Font</key>
-			<string>Monaco 12</string>
+			<string>Hack-Regular 15</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>Hack-Regular 11</string>
+			<string>Hack-Regular 14</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
@@ -2130,7 +2130,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-06-01T19:22:28Z</date>
+	<date>2017-06-26T16:39:09Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
