--- a/config/coc/extensions/package.json
+++ b/config/coc/extensions/package.json
@@ -1,11 +1,3 @@
 {
-  "dependencies": {
-    "coc-go": ">=0.6.0",
-    "coc-json": ">=1.2.4",
-    "coc-marketplace": ">=1.5.0",
-    "coc-phpls": ">=2.1.1",
-    "coc-solargraph": ">=1.1.3",
-    "coc-sql": ">=0.2.4",
-    "coc-tsserver": ">=1.4.8"
-  }
+  "dependencies": {}
 }
