--- a/config/coc/extensions/package.json
+++ b/config/coc/extensions/package.json
@@ -1,3 +1,7 @@
 {
-  "dependencies": {}
+  "dependencies": {
+    "coc-eslint": ">=1.2.3",
+    "coc-json": ">=1.2.4",
+    "coc-tsserver": ">=1.4.8"
+  }
 }
