--- a/config/coc/extensions/package.json
+++ b/config/coc/extensions/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "coc-eslint": ">=1.2.3",
+    "coc-go": ">=0.6.0",
     "coc-json": ">=1.2.4",
     "coc-phpls": ">=2.1.2",
     "coc-tsserver": ">=1.4.8"
