--- a/config/coc/extensions/package.json
+++ b/config/coc/extensions/package.json
@@ -4,6 +4,7 @@
     "coc-go": ">=0.6.0",
     "coc-json": ">=1.2.4",
     "coc-phpls": ">=2.1.2",
+    "coc-snippets": ">=2.1.13",
     "coc-tsserver": ">=1.4.8"
   }
 }
