Add terraform to coc

--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -11,6 +11,11 @@
       "command": "gopls",
       "rootPatterns": ["go.mod", ".vim/", ".git/", ".hg/"],
       "filetypes": ["go"]
+    },
+    "terraform": {
+        "command": "terraform-lsp",
+        "filetypes": ["tf"],
+        "initializationOptions": {}
     }
   },
   "snippets.userSnippetsDirectory": "~/.vim/snippets"
