Add better eslint settings

--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -3,6 +3,8 @@
   "suggest.maxCompleteItemCount": 20,
   "coc.preferences.formatOnSaveFiletypes": [],
   "eslint.filetypes": ["javascript", "typescript", "typescriptreact", "javascriptreact"],
+  "eslint.run": "onSave",
+  "eslint.autoFixOnSave": true,
   "diagnostic.errorSign": "•",
   "diagnostic.warningSign": "•",
   "diagnostic.infoSign": "•",
