--- a/iterm2_profile/com.googlecode.iterm2.plist
+++ b/iterm2_profile/com.googlecode.iterm2.plist
@@ -1897,11 +1897,11 @@
 			<key>Name</key>
 			<string>Gruvbox Dark</string>
 			<key>Non Ascii Font</key>
-			<string>RobotoMonoForPowerline-Regular 12</string>
+			<string>HackNerdFontCompleteM-Regular 12</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>RobotoMonoForPowerline-Regular 12</string>
+			<string>HackNerdFontCompleteM-Regular 12</string>
 			<key>Only The Default BG Color Uses Transparency</key>
 			<false/>
 			<key>Option Key Sends</key>
@@ -3472,7 +3472,7 @@
 	<key>ShowBookmarkName</key>
 	<false/>
 	<key>ShowFullScreenTabBar</key>
-	<false/>
+	<true/>
 	<key>ShowPaneTitles</key>
 	<true/>
 	<key>SmartPlacement</key>
