--- a/tmux.conf
+++ b/tmux.conf
@@ -34,5 +34,10 @@ bind-key -T copy-mode-vi M-j resize-pane -D 1
 bind-key -T copy-mode-vi M-k resize-pane -U 1
 bind-key -T copy-mode-vi M-l resize-pane -R 1
 
+# Undercurl
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+
 set -g default-terminal "xterm-256color"
 set-option -g default-shell $SHELL
