Update fonts and set up better kitty support

--- a/config/kitty/font.conf
+++ b/config/kitty/font.conf
@@ -1,16 +1,11 @@
 # vim:ft=kitty
 
 # Basic font config
-font_family Hack Nerd Font Mono
-font_size 11.0
+font_family Liga SFMono Nerd Font
+font_size 12.0
 
 # Lines looks even cooler
-adjust_line_height 5
+adjust_line_height 1
 
-# Nerd font support for symbols
-symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
-symbol_map codepoints Hack Nerd Font Mono
-
-# Font size mapping
-map ctrl+shift+equal change_font_size all +2.0
-map ctrl+shift+plus change_font_size all +2.0
+# Support for symbols
+symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 Hack Nerd Font Mono
