--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,4 +1,8 @@
 # vim:ft=kitty
 
+# allow kitty to modify commands with cmd
+kitty_mod cmd
+
 include font.conf
+include layout.conf
 include themes/init.conf
