Update fish cd to always set the tab name to the cwd

--- a/config/kitty/layout.conf
+++ b/config/kitty/layout.conf
@@ -3,6 +3,7 @@
 # tab bar
 tab_bar_style slant
 tab_bar_align center
+tab_bar_min_tabs 1
 
 enabled_layouts tall:bias=65;full_size=1;mirrored=false
 
