--- a/config/kitty/themes/init.conf
+++ b/config/kitty/themes/init.conf
@@ -1,4 +1,5 @@
 # vim:ft=kitty
 
-include github_dimmed.conf
+include cattpuccin-mocha.conf
+# include github_dimmed.conf
 # include gruvbox_dark.conf
