--- a/config/kitty/layout.conf
+++ b/config/kitty/layout.conf
@@ -5,7 +5,7 @@ tab_bar_style slant
 tab_bar_align center
 tab_bar_min_tabs 1
 
-enabled_layouts tall:bias=65;full_size=1;mirrored=false
+enabled_layouts tall:bias=65;full_size=1;mirrored=false,stack
 
 # vim-like movements using 'knubie/vim-kitty-navigator'
 map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
@@ -18,10 +18,12 @@ single_instance yes
 listen_on unix:/tmp/kitty
 
 # vim-like window shifting
-map ctrl+shift+h move_window left
-map ctrl+shift+j move_window down
-map ctrl+shift+k move_window up
-map ctrl+shift+l move_window right
+# map ctrl+shift+h move_window left
+# map ctrl+shift+j move_window down
+# map ctrl+shift+k move_window up
+# map ctrl+shift+l move_window right
+
+map ctrl+shift+l next_layout
 
 # new windows in same cwd
 map kitty_mod+enter new_window_with_cwd
