--- a/config/kitty/themes/init.conf
+++ b/config/kitty/themes/init.conf
@@ -1,7 +1,8 @@
 # vim:ft=kitty
 
-include cattpuccin-mocha.conf
+include cattpuccin_mocha.conf
 # include github_dimmed.conf
 # include gruvbox_dark.conf
+# include oceanic_next.conf
 
 background_opacity 0.85
