kitty fully opaque

--- a/config/kitty/themes/init.conf
+++ b/config/kitty/themes/init.conf
@@ -5,4 +5,4 @@ include cattpuccin_mocha.conf
 # include gruvbox_dark.conf
 # include oceanic_next.conf
 
-background_opacity 0.85
+# background_opacity 0.85
