feat: Dracula theme

--- a/config/kitty/themes/init.conf
+++ b/config/kitty/themes/init.conf
@@ -1,8 +1,9 @@
 # vim:ft=kitty
 
-include cattpuccin_mocha.conf
+# include cattpuccin_mocha.conf
 # include github_dimmed.conf
 # include gruvbox_dark.conf
 # include oceanic_next.conf
+include dracula.conf
 
 # background_opacity 0.85
