--- a/config/kitty/layout.conf
+++ b/config/kitty/layout.conf
@@ -8,10 +8,10 @@ tab_bar_min_tabs 1
 enabled_layouts tall:bias=65;full_size=1;mirrored=false,stack
 
 # vim-like movements using 'knubie/vim-kitty-navigator'
-map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
-map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
-map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
-map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
+map ctrl+h kitten pass_keys.py left   ctrl+h
+map ctrl+j kitten pass_keys.py bottom ctrl+j
+map ctrl+k kitten pass_keys.py top    ctrl+k
+map ctrl+l kitten pass_keys.py right  ctrl+l
 
 allow_remote_control yes
 single_instance yes
